--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
             <img src=".//vertual gaming.webp">
         </div>
     </div>
+    <div class="hero">
+        <div class="right-hero">
+            <p>featered post</p>
+            <h3>How AI will <br>change the future</h3>
+            <p class="hero-p">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Sit, ullam aperiam? <br>Dolorem dolore, nesciunt id possimus  <br> voluptatem xasan laborum. Quo!</p>
+            <button class="herro-btn">Read More</button>
+        </div>
+
+        <div class="left-hero">
+            <img src=".//vertual gaming.webp">
+        </div>
+    </div>
 
     <div class="position">
         <img src="" alt="">
